# github-insight

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yaml  flake.nix
src/: lib.rs
src/formatter/: issue.rs  mod.rs  project.rs  project_resource.rs  pull_request.rs  pull_request_diff.rs  pull_request_diff_contents.rs  pull_request_file_stats.rs  repository.rs  repository_branch_group.rs
src/github/: client.rs  error.rs  mod.rs
src/github/graphql/: error.rs  mod.rs  search.rs
src/github/graphql/graphql_types/: comment.rs  issue.rs  mod.rs  pager.rs  project.rs  pull_request.rs  repository.rs  search.rs  timeline.rs  user.rs
src/github/graphql/issue/: query.rs
src/github/graphql/project/: query.rs
src/github/graphql/pull_request/: query.rs
src/github/graphql/repository/: query.rs
src/github/graphql/timeline/: mod.rs
src/services/: fetch.rs  mod.rs  profile.rs  search.rs
src/tools/: error.rs  mod.rs
src/tools/functions/: issue.rs  mod.rs  profile.rs  project.rs  pull_request.rs  repository.rs  search.rs
src/tools/tools_interface/: get_issues_details.rs  get_project_details.rs  get_project_resources.rs  get_pull_request_code_diff_stats.rs  get_pull_request_details.rs  get_pull_request_diff_contents.rs  get_repository_details.rs  list_project_urls_in_current_profile.rs  list_repository_urls_in_current_profile.rs  mod.rs  repository_branch_group.rs  search_in_repositories.rs
src/transport/: mod.rs  sse_server.rs  stdio.rs
src/types/: issue.rs  label.rs  mod.rs  profile.rs  project.rs  pull_request.rs  repository.rs  search.rs  user.rs
tests/: README.md  test_issue.rs  test_profile.rs  test_project.rs  test_pull_requests.rs  test_repository.rs  test_repository_branch_group.rs  test_repository_branch_pair.rs  test_repository_branch_unit.rs  test_search.rs  test_util.rs
