[package]
name = "github-insight"
version = "0.1.0"
edition = "2024"
description = "Rust Documentation MCP Server for LLM crate assistance"
authors = ["me+github@tacogips.me"]
license = "MIT"
repository = "https://github.com/tacogips/github-insight"


[dependencies]
rmcp = { version = "0.1", features = [
    "server",
    "transport-sse-server",
    "transport-io",
] }


# MCP dependencies from GitHub
# HTTP and networking
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "time",
    "macros",
    "sync",
    "signal",
] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
urlencoding = "2.1"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
url = "2.5"
schemars = { version = "0.8", features = ["chrono"] }

# GitHub API client
octocrab = { version = "0.44.1", features = ["timeout"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"
futures = "0.3"
ahash = "0.8"

# Database and storage
tantivy = "0.22"
arrow = "55"

# Platform directories
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.10"

# Progress indicators
indicatif = "0.17"

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.1"

[profile.dev]
opt-level = 1      # Some optimization for faster linking
debug = 1          # Reduced debug info
incremental = true # Faster rebuilds

[profile.dev.build-override]
opt-level = 3 # Optimize build scripts

[features]
default = []
# Features used for testing
this_test_is_disabled = []

# cargo-dist configuration
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false


# Main binary with subcommands
[[bin]]
name = "github-insight-mcp"
path = "src/bin/github_insight_mcp.rs"

# CLI binary for terminal use
[[bin]]
name = "github-insight-cli"
path = "src/bin/github_insight_cli.rs"
